--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,9 +24,15 @@ jobs:
       - name: Check README
         run: |
           if grep -q "id(\"io.github.klahap.mccgen\") version \"$GITHUB_REF_NAME\"" README.md; then
-            echo "README is valid"
+            echo "README version is valid"
           else
             echo "Error, update plugin version in README.md"
+            exit 1
+          fi
+          if grep -q "version = \"$GITHUB_REF_NAME\"" build.gradle.kts; then
+            echo "plugin version is valid"
+          else
+            echo "Error, update plugin version in build.gradle.kts"
             exit 1
           fi
       - name: publish
